--- a/assets/pytutor.theme.css
+++ b/assets/pytutor.theme.css
@@ -1,4 +1,23 @@
 /* ========================================================================== 
+   滚动条样式
+   ========================================================================== */
+
+::-webkit-scrollbar-track,
+::-webkit-scrollbar-corner {
+    background-color: var(--vscode-editor-background);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--vscode-scrollbarSlider-background);
+}
+::-webkit-scrollbar-thumb:hover {
+    background-color: var(--vscode-scrollbarSlider-hoverBackground);
+}
+::-webkit-scrollbar-thumb:active {
+    background-color: var(--vscode-scrollbarSlider-activeBackground)
+}
+
+/* ========================================================================== 
    Visualizer左边栏主题样式定义
    ========================================================================== */
 
